--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pagina de vendas</h1>
+    <p>pagina de vendas</p>
+    <p>Vendas = 50000,00</p>
     <a href="index.html">Voltar para a pagina inicial</a>
 </body>
 </html>
